--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/tesla-clone/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/tesla-clone/teslaIcon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.cdnfonts.com/css/gotham-ssm" rel="stylesheet">
 
